# org.muhkuh.lua-katscha

./: .cproject  .gitignore  .project  CMakeLists.txt  Jenkinsfile  SConstruct  __README__.txt  build_artifact.py  setup.xml
cmake/tests/: mingw_dll_dependencies.py
plugin/: CMakeLists.txt  katscha.cpp  katscha.h  katscha.i  muhkuh_typemaps.i
plugin/installer/lua5.1/: katscha.xml
plugin/installer/lua5.4/: katscha.xml
src/: ad5175.c  ad5175.h  init.S  interface.h  main.c  p2i2c.c  p2i2c.h  plode.c  plode.h  powerboard.c  powerboard.h  spi.c  spi.h
src/installer/: pom.xml
src/netx56/: netx56_intram.ld
